# PL

./: .gitignore  CMakeLists.txt  HelloWorld.cc  JuMP_tutorial.jl  Makefile  NLopt_tutorial.jl  XtraMaps.jl  a.out  accumulate.cpp  adder.cc  algo.tex  algo1.tex  algo2.tex  animal.cc  apply.cc  arma1.cc  arma2.cc  arma3.cpp  arma_mem.cc  array_test.cc  ass.cc  autoc.cc  ballin_prof.hh  bellman-kalaba.tex  bigint.cc  bit.c  bool.c  bool_algebra_null.cc  boost_marray.cc  boost_options.cc  buffons_needle.jl  cargs.c  cauchyschwarz.jl  ce_arma.cc  ce_classmem.cc  cg.jl  cmd_macro.c  cmonad.cpp  cmu_hw_list_algorithms_and_invdict.py  combo.py  (+238 more)
Exercises/OpenACC/: gpu.job  laplace_acc  laplace_acc.c  laplace_serial  laplace_serial.c  loops.c  loops_acc  loops_serial  loops_serial.c
Exercises/Test/: gpu.job
JS/: example.html
afem/: hw4.jl
analytics/: data.py  test_data.py
archive/: accumulate.cpp  aop.c  args.jl  divbyzero.c  flush.c  jmacro.jl  mdarr.cc  parr.c  plife.jl  popcnt.c  simple_l.c  stack_faut.asm  struct_stack_pointer.c  test_debug.jl  uptr.cc  voidp.c
autotools_primer/: Makefile  Makefile.in  config.status  configure  configure.ac
autotools_primer/src/: hello  (+5 more)
avl/: Makefile  avl  avl.cpp  avl0.cpp  avl1.cpp  avl2.cpp
benchmarks/: A1.dsv  A3.dsv  A4.dsv  B3.dsv  b1.dsv  b3.dsv  b4.dsv  b5.dsv  diary  fib.m  fib2.m  julia.txt  julia2.txt  main.jl  main.m  prime.m
blt/: lattice.h  main.c
cgal/: exact.cpp  pas.cpp  surprising.cpp
cmake_primer/: CMakeLists.txt  main.cpp
cmake_primer/include/: world.hpp
cmake_primer/src/: CMakeLists.txt  world.cpp
cnf/: f.f  main.cc
cuda/: MatAdd.cu  VecAdd.cu  hello_cuda.cu
extern2/: externdef.cc  main.cc
fem/: beam.jl  boundary.jl  element.jl  heat.jl  helmholtz.jl  poisson.jl  qe1.jl  qe2.jl  qe3.jl  testK.csv  test_quad.jl  testresults.csv  timoshenko_beam.jl  timoshenko_beam2.jl  timoshenko_beam3.jl  timoshenko_beam4.jl
fort/: CMakeLists.txt  liblol.f  main.f  sq.f
freesurf/: '  fs-16.jl  fs-32.jl  fs-64.jl  fs2-16.jl  fs2-32.jl  fs2-64.jl  main.jl
gnuplot_tutorial/: plot1.gnuplot  plot2.gnuplot  plot3.gnuplot  plot4.gnuplot
jl/: WeirdView.jl  im.jl  mac1.jl  om.jl
julia/: more_tasks.jl  ode_hw5_1a.jl  ode_hw5_1b.jl  producer_consumer_ex.jl
lbm/: CMakeLists.txt  channel.cpp  lid.cpp
link/: CMakeLists.txt  main.c  src1.c  src1.h  src2.c  src2.h
link2/: CMakeLists.txt  main.cc  src1.cc  src1.h  src2.cc  src2.h
lit/: hello.c  hello.html  hello.lit
mandelbrot/: Makefile  mandel.c  mandel_0.c  mandel_1.c  pthread_ex.c  testgnumap.c  testgnuplot.c
markov/: chain.jl  random_walk.jl
matlab/: f1.m  f2.m  mmap.m
mc/: CMakeLists.txt  birthday.cc  birthday_mpi.cc  coin_flip  coin_flip.cc  mc_demo.c  mcmc_demo.c
md/: opemMM_first-example.py
meta/: a.out  abs.cc  euclid.cc  power.cc  rank.cc  remove_const.cc
metropolis/: harmonic.cc  two_state.cpp  two_state2  two_state2.cpp
module/: MyModule.jl  Src1.jl  test.jl
msq/: MarchingSquares.jl  data1.csv  data2.csv  test_driver.jl
num/: .gitignore  cdiff.jl
omp/: critical.c  hello_world.c  int.c  lock.c  omp1.cpp  prime.c  prime.cpp
physics/: PhysicalConstants.jl  central_limit.jl  dirac.jl  gauss_chain.jl  harmonic2.jl  harmonic3d.jl  harmonic_2N_3d.jl  partition.jl  polarization.jl  sine.jl  spring-sys.jl  spring-sys2.jl  square.jl  superposition.jl  vwell.jl
pp/: a.out  bit.cc  power_of_two.cpp
python/: gauss_elim.py
tex/: doc.aux  doc.bbl  doc.bib  doc.blg  doc.tex
transforms/: vec.jl
tutor/: baseball.json  calcstats.py  dict_practice1.py  hello_person.py  ioc_domains.py  ioc_domains.txt  ioc_domains0.py  menu.py  mlbstats.json  output.txt  pwd.txt  readcsv.py  script.py  writecsv.py
typededuct/: b  boosttype.cc  compdiag.cc
vtk/: hello.tcl
(+90 files in other folders)
